fix button kerning, especially on Safari

--- a/src/styles/SquareButton.css
+++ b/src/styles/SquareButton.css
@@ -1,5 +1,5 @@
 .square-btn {
-  @apply border-2 transition-all font-averta rounded-lg font-semibold;
+  @apply border-2 transition-all font-averta rounded-lg font-semibold tracking-tighter;
 }
 
 /* ------- Themes ------- */
